tests/compile-fail/object_safety_nested.ori
// Test that non-object-safe traits are caught in nested type positions (E2024)
// Spec: 06-types.md § Object Safety Rules

trait Clone {
    @clone (self) -> Self
}

// Clone used inside a list type — still a trait object usage
#[compile_fail("cannot be made into an object")]
@process_all (items: [Clone]) -> void =
    print(msg: "processing")
